Cambie el titulo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MV8 - Cleiver Valera</title>
+	<title>Cleiver Valera</title>
 	<style type="text/css">
 		*{
 			margin: 0;
