--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			justify-content: center;
 			align-items: center;
 			color: red;
-			background: #222;
+			background: gold;
 
 			font-size: 5em;
 		}
