Cambio del color por white

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
-			color: red;
+			color: white;
 			background: gold;
 
 			font-size: 5em;
