--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Picel Key</title>
+	<title>Picel Key - Oculus</title>
 	<style type="text/css">
 		*{
 			margin: 0;
